// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OutlineDot /> Rendering renders Default 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="black"
    innerBorderWidth={1}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white bw1 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white bw1 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a different color dot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="blue"
    innerBorderWidth={1}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-blue br-100 b--white bw1 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-blue br-100 b--white bw1 h1 w1"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-blue br-100 b--white bw1 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-blue br-100 b--white bw1 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-blue br-100 b--white bw1 h1 w1"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-blue br-100 b--white bw1 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a different color inner area 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="black"
    innerBorderWidth={1}
    innerColor="red"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--red bw1 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--red bw1 h1 w1"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--red bw1 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--red bw1 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--red bw1 h1 w1"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--red bw1 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a different color outline 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="blue"
    borderWidth={0}
    color="black"
    innerBorderWidth={1}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--blue ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />,
        "className": "b--blue ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white bw1 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--blue ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />,
          "className": "b--blue ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white bw1 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a large version 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="black"
    innerBorderWidth={1}
    innerColor="white"
    large={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h2 w2"
      >
        <div
          className="ba bg-black br-100 b--white bw1 h2 w2"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h2 w2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white bw1 h2 w2"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h2 w2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white bw1 h2 w2",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h2 w2"
        >
          <div
            className="ba bg-black br-100 b--white bw1 h2 w2"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h2 w2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white bw1 h2 w2"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h2 w2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white bw1 h2 w2",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a thicker border 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={2}
    color="black"
    innerBorderWidth={1}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba bw2 br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white bw1 h1 w1"
        />,
        "className": "b--black ba bw2 br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white bw1 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba bw2 br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white bw1 h1 w1"
          />,
          "className": "b--black ba bw2 br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white bw1 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders a thicker inner area 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="black"
    innerBorderWidth={2}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--white bw2 h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white bw2 h1 w1"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white bw2 h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--white bw2 h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white bw2 h1 w1"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white bw2 h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders no borders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="black"
    borderWidth={0}
    color="black"
    innerBorderWidth={0}
    innerColor="white"
    large={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--black ba  br-100 flex items-center justify-center h1 w1"
      >
        <div
          className="ba bg-black br-100 b--white  h1 w1"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h1 w1",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-black br-100 b--white  h1 w1"
        />,
        "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-black br-100 b--white  h1 w1",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--black ba  br-100 flex items-center justify-center h1 w1"
        >
          <div
            className="ba bg-black br-100 b--white  h1 w1"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h1 w1",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-black br-100 b--white  h1 w1"
          />,
          "className": "b--black ba  br-100 flex items-center justify-center h1 w1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-black br-100 b--white  h1 w1",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<OutlineDot /> Rendering renders no borders and large 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OutlineDot
    borderColor="green"
    borderWidth={0}
    color="green"
    innerBorderWidth={0}
    innerColor="white"
    large={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <span
        className="b--green ba  br-100 flex items-center justify-center h2 w2"
      >
        <div
          className="ba bg-green br-100 b--white  h2 w2"
        />
      </span>,
      "className": "br-100 flex items-center justify-center h2 w2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ba bg-green br-100 b--white  h2 w2"
        />,
        "className": "b--green ba  br-100 flex items-center justify-center h2 w2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "ba bg-green br-100 b--white  h2 w2",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="b--green ba  br-100 flex items-center justify-center h2 w2"
        >
          <div
            className="ba bg-green br-100 b--white  h2 w2"
          />
        </span>,
        "className": "br-100 flex items-center justify-center h2 w2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="ba bg-green br-100 b--white  h2 w2"
          />,
          "className": "b--green ba  br-100 flex items-center justify-center h2 w2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "ba bg-green br-100 b--white  h2 w2",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
